--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sass": "node-sass --source-map-embed ./src/styles/styles.scss ./dist/styles.css",
     "sass-watch": "node-sass --source-map-embed --watch --recursive src/styles/styles.scss ./dist/styles.css",
     "test": "npm-run-all eslint stylelint",
-    "dev": "npm-run-all --parallel sass sass-watch rollup-watch browser-sync"
+    "dev": "concurrently  npm:sass npm:sass-watch npm:rollup-watch npm:browser-sync"
   },
   "keywords": [],
   "author": "",
@@ -22,14 +22,21 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "browser-sync": "^2.26.7",
+    "concurrently": "^5.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.13.3",
     "rollup": "^1.27.4",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "stylelint": "^9.10.1",
     "stylelint-config-primer": "^2.2.11"
+  },
+  "dependencies": {
+    "core-js": "^3.4.2"
   }
 }
